# alt_std

./: .gitignore  CMakeLists.txt  CMakePresets.json
alt_std/: CMakeLists.txt  functional.h
benchmark/: CMakeLists.txt  benchmark.patch  functional.cpp
cmake_modules/: CodeCoverage.cmake
tests/: CMakeLists.txt  functional.cpp
